fixed spacing. added buying legend.

--- a/public/style.css
+++ b/public/style.css
@@ -118,7 +118,7 @@ h2{
 }
 #clicker:active {
 	
-	box-shadow: 4px 5px black;
+	box-shadow: 3px 4px black;
 	transform: translateY(4px);
 }
 
@@ -132,7 +132,8 @@ h2{
 	
 }
 #midinfo{
-font-weight:bold;
+font-weight:bold;\
+font-size: 20px;
 
 }
 #hesscoinsat{
@@ -246,4 +247,17 @@ th, td{
 }
 #tablekey{
 	font-size: 35px;
+}
+/* 404 
+#middle{
+	display: flex;
+	justify-content: center;
+	margin-top: 100px;
+	font-size: 42px;
+}
+*/
+
+
+#buylegend{
+	color:#19d626;
 }
